--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -1,4 +1,5 @@
 /* The Modal (background) */
+<center>
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -210,6 +211,6 @@ h4 {
 .b,label.hcVar{
 	font-weight: bold;
 }
-
+</center>
 
 
