--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<head> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 	<script src="/static/js/index.js"></script>
-	<title>EMBEBIDOS</title>
+	<title>Casanova's SMART HOME</title>
 	</head>
 </center>	
 <body>
