--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script src="/static/js/index.js"></script>
-<title>Casanova's SMART HOME</title>
+<title>EMBEBIDOS</title>
 </head>
 <center>
 <body>
 
-<h1>Embebidos</h1>
+<h1>Casanova SMART HOME</h1>
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
 <h1>Sensor:</h><h id="sensor">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
