--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
 <h1>Sensor:</h><h id="sensor">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
-LED1 ON!</button>
+ACTIVAR BOCINA</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
-LED1_OFF!</button>
+DESACTIVAR BOCINA!</button>
 <script>
 /*
 function LED1_On() {
