--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 ACTIVAR BOCINA</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
-DESACTIVAR BOCINA!</button>
+DESACTIVAR BOCINA</button>
 <script>
 /*
 function LED1_On() {
