--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <h1>Historial:</h><h id="sensor">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 ACTIVAR BOCINA</button>
-<button id = 'bothistorial'type="button" onclick="Histo1">
+<button id = 'bothistorial'type="button" onclick="Histo1();">
 HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
