--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <h1>Casanova SMART HOME</h1>
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
 <h1>Sensor:</h><h id="sensor">--</h1>
-<h1>Historial:</h><h id="sensor">--</h1>
+<h1>Historial:</h><h id="historial">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 ACTIVAR BOCINA</button>
 <button id = 'bothistorial'type="button" onclick="Histo1();">
