--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
 ACTIVAR BOCINA</button>
 <button id = 'bothistorial'type="button" onclick="Histo1();">
 HISTORIAL</button>
+<button id = 'botborrar'type="button" onclick="borrarhisto();">
+BORRAR HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
 <script>
