--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@ HISTORIAL</button>
 BORRAR HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
+<label for="name">Name (4 to 8 characters):</label>
+
+<input type="text" id="name" name="name" required
+       minlength="4" maxlength="8" size="10">
 <script>
 /*
 function LED1_On() {
