--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@ HISTORIAL</button>
 BORRAR HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
-<label for="name">Name (4 to 8 characters):</label>
+<label for="name">Ingresar password:</label>
 
-<input type="text" id="name" name="name" required
+<input type="password" id="name" name="name" required
        minlength="4" maxlength="8" size="10">
 <script>
 /*
