--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,15 @@ HISTORIAL</button>
 BORRAR HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
-<label for="name">Ingresar password:</label>
-
-<input type="password" id="name" name="name" required
-       minlength="4" maxlength="8" size="10">
+<label for="name">Password:</label>
+<input type="password" id="myText" value="">
+<button onclick="myFunction()">Ingresar</button>
 <script>
+function myFunction() {
+  var x = document.getElementById("myText").value;
+  document.getElementById("demo").innerHTML = x;
+}	
+	
 /*
 function LED1_On() {
 	alert("led on");
