--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <h1>Historial:</h><h id="historial">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 ACTIVAR BOCINA</button>
-<button id = 'bothistorial'type="button" onclick="Histo1();">
+<button id = 'bothistorial'type="button" onclick="Histo1() disabled;">
 HISTORIAL</button>
 <button id = 'botborrar'type="button" onclick="borrarhisto();">
 BORRAR HISTORIAL</button>
