--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 <h1>Historial:</h><h id="historial">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 ACTIVAR BOCINA</button>
-<button id = 'bothistorial'type="button" onclick="Histo1();">
+<button id = 'bothistorial'type="button" disabled="true" onclick="Histo1();">
 HISTORIAL</button>
-<button id = 'botborrar'type="button" disabled="true" onclick="borrarhisto();">
+<button id = 'botborrar'type="button" onclick="borrarhisto();">
 BORRAR HISTORIAL</button>
 <button id = 'LED1Off' type="button" onclick="LED1_Off();">
 DESACTIVAR BOCINA</button>
