--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,13 @@
 
 <h1>Casanova SMART HOME</h1>
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
-<h1>Sensor:</h><h id="sensor">--</h1>
-<h1>Historial:</h><h id="historial">--</h1>
+<h1>Historial1:</h><h id="historial2">--</h1>
+<h1>Historial2:</h><h id="historial">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
-ACTIVAR BOCINA</button>
+HISTORIAL 1</button>
 <button id = 'bothistorial'type="button" disabled="true" onclick="Histo1();">
-HISTORIAL</button>
-<button id = 'botborrar'type="button" onclick="borrarhisto();">
-BORRAR HISTORIAL</button>
-<button id = 'LED1Off' type="button" onclick="LED1_Off();">
-DESACTIVAR BOCINA</button>
-<label for="name">Password:</label>
-<input type="password" id="myText" value="">
-<button onclick="myFunction()">Ingresar</button>
+HISTORIAL2</button>
+
 <script>
 	
 	
