--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <h1>Historial2:</h><h id="historial">--</h1>
 <button id = 'LED1On'type="button" onclick="LED1_On();">
 HISTORIAL 1</button>
-<button id = 'bothistorial'type="button" disabled="true" onclick="Histo1();">
+<button id = 'bothistorial'type="button" onclick="Histo1();">
 HISTORIAL2</button>
 
 <script>
