--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 
 <h1>Casanova SMART HOME</h1>
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
-<h1>Historial1:</h><h id="historial2">--</h1>
-<h1>Historial2:</h><h id="historial">--</h1>
-<button id = 'LED1On'type="button" onclick="LED1_On();">
+<h1>Historial1:</h><h id="historial1">--</h1>
+<h1>Historial2:</h><h id="historia2">--</h1>
+<button id = 'bh1'type="button" onclick="Histo2();">
 HISTORIAL 1</button>
-<button id = 'bothistorial'type="button" onclick="Histo1();">
+<button id = 'bh2'type="button" onclick="Histo1();">
 HISTORIAL2</button>
 
 <script>
