--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
 
 <h1>Casanova SMART HOME</h1>
 <img id="imagen" src="/static/images/home.png" width="100" height="100" alt="user">
-<h1>Historial1:</h><h id="historial1">--</h1>
-<h1>Historial2:</h><h id="historia2">--</h1>
+<h1>Historial:</h><h id="historial">--</h1>
 <button id = 'bh1'type="button" onclick="Histo2();">
 HISTORIAL 1</button>
 <button id = 'bh2'type="button" onclick="Histo1();">
