--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
 HISTORIAL 2</button>
 <button id = 'bh2'type="button" onclick="Histo1();">
 HISTORIAL 1</button>
+<button id = 'clc'type="button" onclick="Clean();">
+clean</button>
 
 
 <script>
